2003-11-20  Ross Burton  <ross@burtonini.com>

	* loudmouth/lm-message-node.h:
	- Mark the private members how gtk-doc wants it.

	* loudmouth/lm-message-node.c:
	- Fix comment typos and document more parameters.

	* loudmouth/lm-connection.c: Fix comment typos.

	* docs/reference/loudmouth-sections.txt: 
	- Removed a non-existent function.

	* docs/reference/tmpl/lm-connection.sgml: Fix some typos.

	* docs/reference/tmpl/lm-message-node.sgml:
	- Document raw_node, and remove private fields.

	* docs/reference/tmpl/lm-message.sgml: gtk-doc did this itself...

2003-11-16  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	(lm_connection_new): Don't create and attach source here
	(lm_connection_open): Do it here, 
	(lm_connection_open_and_block): and here. Fixes #126983.

2003-11-11  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c:
	(connection_do_close): Remove the incoming source. Reported and fix
	  proposed by Christopher G. Abiad
	(lm_connection_authenticate_and_block):
	- Set error message on auth failed (should be more explicit). Fixes
	  problem when you try to read the error message on fail.

2003-11-11  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am: 
	- Added README.WIN32 so it will be distributed next release.

2003-10-13  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped version to 0.14.1.99

	* loudmouth/lm-message.c: 
	(lm_message_new): Always set an ID on the message.

2003-10-13  Mikael Hallendal  <micke@imendio.com>
 
	* mono/*: Added first cut at C-sharp bindings that I hacked up a while
	  ago. Can't continue development at the moment since the mono compiler
	  segfaults on my machine at the moment.

	* python/*: Johan Dahlin added a first cut of python bindings, yay him!

2003-10-13  Mikael Hallendal  <micke@imendio.com>

	* NEWS: Updated for 0.14.1
	
	* configure.in: Bumped to 0.14.1
	
	* loudmouth/lm-connection.c: (connection_in_event): check if bytes_read