@@ -232,15 +232,6 @@ Callback called when a connection is closed.
 @Returns: 
 
 
-<!-- ##### FUNCTION lm_connection_set_use_ssl ##### -->
-<para>
-
-</para>
-
-@connection: 
-@use_ssl: 
-
-
 <!-- ##### FUNCTION lm_connection_send ##### -->
 <para>
 
