@@ -1,3 +1,8 @@
+2003-12-15  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-connection.c:
+	- Fixed issue with the SSL parts. Patch from Colin Walters
+
 2003-11-20  Ross Burton  <ross@burtonini.com>
 
 	* loudmouth/lm-message-node.h:
